--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,11 +56,12 @@
       </ul>
     </nav>
   </header>
-  <div class="interface">
+  <div class="interface" style="padding: 10px;">
     <h1>
       A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
     </h1>
-    <ul>
+       <section id="sobre">
+    
       <li>
         Soluções criativas e inovadoras para seus projetos de comunicação.
       </li>
@@ -68,13 +69,12 @@
         Uma equipe experiente e dedicada a entregar resultados excepcionais.
       </li>
       <li>
-        Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
-    </ul>
-    <section id="sobre">
-          <h2>
+        Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.
+      </li>
+        <h2>
         Nossa Missão
       </h2>
-      <ul>
+      <div>
         <li>
           Elevar marcas e ideias a novos patamares
         </li>
@@ -84,7 +84,7 @@
         <li>
           Gerar resultados tangíveis
         </li>
-      </ul>
+      </div>
       <h2>
         Nossa Visão
       </h2>
