--- a/templates/validar certificado.html
+++ b/templates/validar certificado.html
@@ -56,12 +56,12 @@
       </ul>
     </nav>
   </header>
-  <div class="interface">
+  <div class="interface" style="padding: 15px;">
     <div class="validarCertificado">
       <h1>
         Validação de Certificados: Protegendo Sua Navegação Online
       </h1>
-      <p>
+      <p style="font-size: larger;">
         A internet se tornou uma ferramenta indispensável em nosso dia a dia, proporcionando acesso a informações,
         serviços e conexões. No entanto, navegar online também traz consigo riscos, como a interceptação de dados,
         ataques de phishing e conteúdo malicioso. É aí que entra a validação de certificados, atuando como um escudo
@@ -81,6 +81,7 @@
         imitação criada para roubar seus dados.
       </p>
    
+       <div class="box">
         <h1>
           Benefícios da Validação de Certificados:
         </h1>
@@ -107,6 +108,7 @@
           levar a um aumento nas conversões e na fidelidade à marca. Demonstra profissionalismo e compromisso com a
           segurança por parte da empresa ou organização que administra o site.
         </p>
+       </div>
      
     </div>
   </div>
