--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -11,7 +11,7 @@
   <title>INFOPRODUTOS</title>
 </head>
 
-<body>
+<body style="background-color: white;">
   <header>
     <nav>
       <a href="menu.html">
@@ -57,10 +57,9 @@
     </nav>
   </header>
   <div class="interface">
-    <img style="float: right;" src="../static/fundo.png" alt="">
-    <div id="loocursos">
+    <img src="../static/fundo.png" id="fundo-png" alt="">
       <h1>
-        Infoprodutos: Cursos Online para Você Aprender e Crescer!
+        INFOPRODUTOS: Cursos online para você aprender e creser!
       </h2>
       <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
         <a href="IOT.html" target="_blank">
@@ -84,7 +83,7 @@
           </video>
         </a>
       </ul>
-    </div>
+ 
   </div>
 </body>
 
