--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/style.css">
     <title>INFOPRODUTOS</title>
   </head>
-<body style="background-color: #230D73;">
+<body>
   <a id="logoPK" href="../index.html">
     <img src="../static/logoPK.png" alt="">
   </a>
