--- a/templates/os melhores em - INTERNET DAS COISAS.html
+++ b/templates/os melhores em - INTERNET DAS COISAS.html
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <div class="interface">
-    <section id="ranking" class="ranking">
+   <!-- <section id="ranking" class="ranking">
       <h2>
         Compare seu progresso com outros participantes
       </h2>
@@ -85,5 +85,7 @@
           PROGRAMANDO EM JAVA SCRIPT
         </a>
       </article>
+    </section> -->
+  <h1>Em produção</h1>
   </div>
 </body>
