--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -56,8 +56,13 @@
       </ul>
     </nav>
   </header>
-  <div class="interface" style="padding: 10px;">
-    <h1>
+    <div class="interface" >
+      <style>
+        ul li p{
+          color: black;
+        }
+      </style>
+    <h1 style="margin-top: 30vh;">
       A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
     </h1>
        <section id="sobre">
@@ -88,7 +93,7 @@
       <h2>
         Nossa Visão
       </h2>
-      <p style="background-color: #230d731a;">
+      <p>
         Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
         gerar resultados excepcionais para seus clientes.
       </p>
@@ -144,7 +149,7 @@
         RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR
         DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
       </p>
-      <p style="background-color: white;">
+      <p>
         Clique
         <a href="https://iplis.ru/meu-portifolio" target="_blank">
           aqui
