--- a/templates/validar certificado.html
+++ b/templates/validar certificado.html
@@ -56,7 +56,7 @@
       </ul>
     </nav>
   </header>
-  <div class="interface" style="padding: 15px;">
+  <div class="interface">
     <div class="validarCertificado">
       <h1>
         Validação de Certificados: Protegendo Sua Navegação Online
