--- a/templates/os melhores em - PROGRAMANDO EM JAVA SCRIPT.html
+++ b/templates/os melhores em - PROGRAMANDO EM JAVA SCRIPT.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -57,7 +57,7 @@
     </nav>
   </header>
   <div class="interface">
-    <section id="ranking" class="ranking">
+   <!-- <section id="ranking" class="ranking">
       <h2>
         Compare seu progresso com outros participantes
       </h2>
@@ -70,21 +70,22 @@
       </p>
       <article>
         <a style="color: white;" href="Todas as pontuações acumuladas.html">
-         TODAS AS OPONTUAÇÕES ACUMULADAS
+          TODAS AS OPONTUAÇÕES ACUMULADAS
         </a>
         <a style="color: white;" href="os melhores em - INTERNET DAS COISAS.html">
           INTERNET DAS COISAS
         </a>
         <a style="color: white;" href="os melhores em - MARCAÇÕES HTML E CSS.html">
-       MARCAÇÕES HTML E CSS
+          MARCAÇÕES HTML E CSS
         </a>
         <a style="color: white;" href="os melhores em - PROGRAMANDO EM PYTHON.html">
           PROGRAMANDO EM PYTHON
         </a>
         <a style="color: white;" href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
-      PROGRAMANDO EM JAVA SCRIPT
+          PROGRAMANDO EM JAVA SCRIPT
         </a>
       </article>
-    </section>
+    </section> -->
+  <h1>Em produção</h1>
   </div>
 </body>
