--- a/static/style.css
+++ b/static/style.css
@@ -439,3 +439,11 @@ input {
       display: block;
     }
   }
+  .container{
+    display: flex; /* Transforma o body em um container flex */
+    justify-content: center; /* Alinha os itens no centro horizontalmente */
+    align-items: center; /* Alinha os itens no centro verticalmente   
+*/
+    height: 100vh; /* Define a altura do body como 100% da viewport */
+    margin: 0;
+  }
