--- a/templates/menu.html
+++ b/templates/menu.html
@@ -42,7 +42,14 @@
     </li>
   </ul>
   <a id="logoPK" href="../index.html">
-    <img src="../static/logoPK.png" alt="">
+    <div
+    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+    <iframe loading="lazy"
+      style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+      allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
+  </div>
   </a>
 </body>
 
