--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon">
   <link rel="stylesheet" href="../static/style.css">
   <title>INFOPRODUTOS</title>
 </head>
