--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -16,14 +16,18 @@
 <body>
   <header>
     <nav>
-      <a href="menu.html">
-        <picture>
-          <img id="menu" src="../static/menu.png" alt="">
-        </picture>
-      </a>
-      <a id="logoPK" href="../index.html">
-        <img src="../static/logoPK.png" alt="">
-      </a>
+      <div class="flex">
+        <div style="padding: 10px;">
+          <a href="menu.html">
+            <picture>
+              <img id="menu" src="../static/menu.png" alt="">
+            </picture>
+          </a>
+        </div>
+        <div>
+          <picture><img src="../static/logoPK.png" alt=""></picture>
+        </div>
+      </div>
       <ul class="minhaDivNavApareceESome">
         <li>
           <a href="../templates/cursos.html">
