--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -15,6 +15,11 @@
   <header>
     <nav>
            <ul class="minhaDivNavApareceESome">
+            <li>
+              <a href="../index.html">
+                <img src="../static/logoPK.png" style="width: 20vh;">
+              </a>
+            </li>
         <li>
           <a href="../templates/cursos.html">
             CURSOS
