--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header>
+  <header style="margin-bottom: 200px;">
     <nav>
       <div class="flex">
         <div style="padding: 10px;">
@@ -22,7 +22,7 @@
             </picture>
           </a>
         </div>
-          </div>
+      </div>
       <ul class="minhaDivNavApareceESome">
         <li>
           <a href="../templates/cursos.html">
@@ -56,40 +56,33 @@
         </li>
       </ul>
     </nav>
-       <div class="interface">
-      </header>
-          <section id="ranking" class="ranking">
-            <picture id="video-topLogoPK" class="mp4">
-              <video muted autoplay loop style="video::internal-media-controls{display: none;}" src="../static/topLogoPK.mp4">
-              </video>
-            </picture>
-      <h2>
-        Compare seu progresso com outros participantes
-      </h2>
-      <p>
-        Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
-        aulas.
-      </p>
-      <p>
-        Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
-      </p>
-      <article>
-        <a href="Todas as pontuações acumuladas.html">
-         TODAS AS OPONTUAÇÕES ACUMULADAS
-        </a>
-        <a href="os melhores em - INTERNET DAS COISAS.html">
-          INTERNET DAS COISAS
-        </a>
-        <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
-       MARCAÇÕES HTML E CSS
-        </a>
-        <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
-          PROGRAMANDO EM PYTHON
-        </a>
-        <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
+  </header>
+  <h2>
+    Compare seu progresso com outros participantes
+  </h2>
+  <p>
+    Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
+    aulas.
+  </p>
+  <p>
+    Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
+  </p>
+  <article>
+    <a href="Todas as pontuações acumuladas.html">
+      TODAS AS OPONTUAÇÕES ACUMULADAS
+    </a>
+    <a href="os melhores em - INTERNET DAS COISAS.html">
+      INTERNET DAS COISAS
+    </a>
+    <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
+      MARCAÇÕES HTML E CSS
+    </a>
+    <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
+      PROGRAMANDO EM PYTHON
+    </a>
+    <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
       PROGRAMANDO EM JAVA SCRIPT
-        </a>
-      </article>
-    </section>
+    </a>
+  </article>
   </div>
 </body>
