--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -14,16 +14,12 @@
 <body>
   <header>
     <nav>
-      <div class="flex">
-        <div style="padding: 10px;">
-          <a href="menu.html">
-            <picture>
-              <img id="menu" src="../static/menu.png" alt="">
-            </picture>
-          </a>
-        </div>
-          </div>
       <ul class="minhaDivNavApareceESome">
+        <li>
+          <a href="../index.html">
+            <img src="../static/logoPK.png" style="width: 20vh;">
+          </a>
+        </li>
         <li>
           <a href="../templates/cursos.html">
             CURSOS
@@ -59,7 +55,7 @@
   </header>
   <div class="interface">
     <section class="finalizar">
-      <h1>
+      <h1 style="color: blue;">
         PROGRAMANDO EM JAVA SCRIPT
       </h1>
       <li>
