--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -16,16 +16,12 @@
 <body>
   <header>
     <nav>
-      <div class="flex">
-        <div style="padding: 10px;">
-          <a href="menu.html">
-            <picture>
-              <img id="menu" src="../static/menu.png" alt="">
-            </picture>
-          </a>
-        </div>
-          </div>
       <ul class="minhaDivNavApareceESome">
+        <li>
+          <a href="../index.html">
+            <img src="../static/logoPK.png" style="width: 20vh;">
+          </a>
+        </li>
         <li>
           <a href="../templates/cursos.html">
             CURSOS
@@ -58,10 +54,11 @@
         </li>
       </ul>
     </nav>
+
   </header>
   <div class="interface">
     <section class="finalizar">
-      <h1>
+      <h1 style="color: blue;">
         IOT - INTERNET DAS COISAS
       </h1>
       <li>
