--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -14,52 +14,48 @@
 <body>
   <header>
     <nav>
-      <div class="flex">
-        <div style="padding: 10px;">
-          <a href="menu.html">
-            <picture>
-              <img id="menu" src="../static/menu.png" alt="">
-            </picture>
-          </a>
-        </div>
-          </div>
       <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+       <li>
+         <a href="../index.html">
+           <img src="../static/logoPK.png" style="width: 20vh;">
+         </a>
+       </li>
+   <li>
+     <a href="../templates/cursos.html">
+       CURSOS
+     </a>
+   </li>
+   <li>
+     <a href="https://www.instagram.com/ti.udia/" target="_blank">
+       BLOG
+     </a>
+   </li>
+   <li>
+     <a href="sobre.html">
+       SOBRE
+     </a>
+   </li>
+   <li>
+     <a href="hall da fama.html">
+       HALL DA FAMA
+     </a>
+   </li>
+   <li>
+     <a href="validar certificado.html">
+       VALIDAR CERTIFICADO
+     </a>
+   </li>
+   <li>
+     <a href="../templates/formulario de inscrição.html">
+       AFILIADOS
+     </a>
+   </li>
+ </ul>
+</nav>
   </header>
   <div class="interface">
     <section class="finalizar">
-      <h1>
+      <h1 style="color: blue;">
         MARCAÇÕES HTML E CSS
       </h1>
       <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay>
