--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -54,7 +54,7 @@
     </nav>
   </header>
   <div class="interface">
-      <h1>
+      <h1 style="color: #230D73;">
         INFOPRODUTOS: Cursos online para você aprender e creser!
       </h2>
       <img src="../static/fundo.png" id="fundo-png" alt="">
