--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -13,45 +13,14 @@
 
 <body>
   <header>
-    <nav>
-      <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="../index.html">
-            <img src="../static/logoPK.png" style="width: 20vh;">
-          </a>
-        </li>
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+    <div class="flex">
+      <a id="logo" href="../templates/menu.html">
+        <img id="menu" src="../static/menu.png">
+      </a>
+      <a style="margin: auto;" href="../index.html">
+        <img src="../static/logoPK.png" class="minhaDivNavApareceESomeLogoPK">
+      </a>
+    </div>
   </header>
   <div class="interface">
     <section class="finalizar">
