--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -13,60 +13,20 @@
 
 <body>
   <header>
-    <nav>
-      <a href="menu.html">
-        <picture>
-          <img id="menu" src="../static/menu.png" alt="">
-        </picture>
+    <div class="flex">
+      <a id="logo" href="../templates/menu.html">
+        <img id="menu" src="../static/menu.png">
       </a>
-      <a id="logoPK" href="../index.html">
-        <img src="../static/logoPK.png" alt="">
+      <a style="margin: auto;" href="../index.html">
+        <img src="../static/logoPK.png" class="minhaDivNavApareceESomeLogoPK">
       </a>
-      <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+    </div>
   </header>
-    <div class="interface" >
-      <style>
-        ul li p{
-          color: black;
-        }
-      </style>
-    <h1 style="margin-top: 30vh;">
+    <div class="interface">
+      <section id="sobre">
+    <h1 style="color: #230D73;">
       A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
     </h1>
-       <section id="sobre">
-    
       <li>
         Soluções criativas e inovadoras para seus projetos de comunicação.
       </li>
@@ -76,9 +36,9 @@
       <li>
         Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.
       </li>
-        <h2>
+      <h1 style="color: #230D73;">
         Nossa Missão
-      </h2>
+      </h1>
       <div>
         <li>
           Elevar marcas e ideias a novos patamares
@@ -90,16 +50,16 @@
           Gerar resultados tangíveis
         </li>
       </div>
-      <h2>
+      <h1 style="color: #230D73;">
         Nossa Visão
-      </h2>
+      </h1>
       <p>
         Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
         gerar resultados excepcionais para seus clientes.
       </p>
-      <h2>
+      <h1 style="color: #230D73;">
         Nossos Valores
-      </h2>
+      </h1>
     <ul>
       <li>
         Criatividade
@@ -120,9 +80,9 @@
         Respeito
       </li>
     </ul>
-      <h2>
-        O que nos diferencia
-      </h2>
+    <h1 style="color: #230D73;">
+      O que nos diferencia
+      </h1>
       <ul>
       <li>
         Experiência e Expertise
@@ -140,7 +100,7 @@
         Atendimento Personalizado
       </li>
       </ul>
-      <h2 style="text-align: center;">
+      <h2 style="text-align: center; color: #230D73;">
         <strong>
           ATENÇÃO !
         </strong>
