--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -12,50 +12,15 @@
 </head>
 
 <body>
-  <header style="margin-bottom: 200px;">
-    <nav>
-      <div class="flex">
-        <div style="padding: 10px;">
-          <a href="menu.html">
-            <picture>
-              <img id="menu" src="../static/menu.png" alt="">
-            </picture>
-          </a>
-        </div>
-      </div>
-      <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+  <header>
+    <div class="flex">
+      <a id="logo" href="../templates/menu.html">
+        <img id="menu" src="../static/menu.png">
+      </a>
+      <a style="margin: auto;" href="../index.html">
+        <img src="../static/logoPK.png" class="minhaDivNavApareceESomeLogoPK">
+      </a>
+    </div>
   </header>
   <h2>
     Compare seu progresso com outros participantes
