--- a/templates/os melhores em - MARCAÇÕES HTML E CSS.html
+++ b/templates/os melhores em - MARCAÇÕES HTML E CSS.html
@@ -13,48 +13,14 @@
 
 <body>
   <header>
-    <nav>
-      <a href="menu.html">
-        <picture>
-          <img id="menu" src="../static/menu.png" alt="">
-        </picture>
+    <div class="flex">
+      <a id="logo" href="../templates/menu.html">
+        <img id="menu" src="../static/menu.png">
       </a>
-      <a id="logoPK" href="../index.html">
-        <img src="../static/logoPK.png" alt="">
+      <a style="margin: auto;" href="../index.html">
+        <img src="../static/logoPK.png" class="minhaDivNavApareceESomeLogoPK">
       </a>
-      <ul class="minhaDivNavApareceESome">
-        <li>
-          <a href="../templates/cursos.html">
-            CURSOS
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/ti.udia/" target="_blank">
-            BLOG
-          </a>
-        </li>
-        <li>
-          <a href="sobre.html">
-            SOBRE
-          </a>
-        </li>
-        <li>
-          <a href="hall da fama.html">
-            HALL DA FAMA
-          </a>
-        </li>
-        <li>
-          <a href="validar certificado.html">
-            VALIDAR CERTIFICADO
-          </a>
-        </li>
-        <li>
-          <a href="../templates/formulario de inscrição.html">
-            AFILIADOS
-          </a>
-        </li>
-      </ul>
-    </nav>
+    </div>
   </header>
   <div class="interface">
    <!-- <section id="ranking" class="ranking">
