--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -22,32 +22,43 @@
       </a>
     </div>
   </header>
-  <h2>
-    Compare seu progresso com outros participantes
-  </h2>
-  <p>
-    Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
-    aulas.
-  </p>
-  <p>
-    Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
-  </p>
-  <article>
-    <a href="Todas as pontuações acumuladas.html">
-      TODAS AS OPONTUAÇÕES ACUMULADAS
-    </a>
-    <a href="os melhores em - INTERNET DAS COISAS.html">
-      INTERNET DAS COISAS
-    </a>
-    <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
-      MARCAÇÕES HTML E CSS
-    </a>
-    <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
-      PROGRAMANDO EM PYTHON
-    </a>
-    <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
-      PROGRAMANDO EM JAVA SCRIPT
-    </a>
-  </article>
-  </div>
+  <section id="sectionHallDaFama">
+    <h2>
+      Compare seu progresso com outros participantes
+    </h2>
+    <p>
+      Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
+      aulas.
+    </p>
+    <p>
+      Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
+    </p>
+    <ul id="ulHallDaFama">
+      <li>
+        <a href="Todas as pontuações acumuladas.html">
+          TODAS AS OPONTUAÇÕES ACUMULADAS
+        </a>
+      </li>
+      <li>
+        <a href="os melhores em - INTERNET DAS COISAS.html">
+          INTERNET DAS COISAS
+        </a>
+      </li>
+      <li>
+        <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
+          MARCAÇÕES HTML E CSS
+        </a>
+      </li>
+      <li>
+        <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
+          PROGRAMANDO EM PYTHON
+        </a>
+      </li>
+      <li>
+        <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
+          PROGRAMANDO EM JAVA SCRIPT
+        </a>
+      </li>
+    </ul>
+  </section>
 </body>
