--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,19 @@ a {
     margin: 15px;
     padding: 5px;
 }
+#sobre p, li{
+    color: #230D73;
+}
+#validarCertificado h1, p, li{
+    color: #230D73;
+}
+#formularioInscricao h1, h2, p, li{
+    color: #230D73;
+}
+#sectionHallDaFama h1, h2, p, li{
+    color: white;
 
+}
 .interface {
     padding: 30px;
     padding-top: 30vh;
@@ -346,15 +358,7 @@ ul {
     box-shadow: 0px 0px 0px;
     border-radius: 1px solid gray;
     }
-    #sobre p, li{
-        color: #230D73;
-    }
-    #validarCertificado h1, p, li{
-        color: #230D73;
-    }
-    #formularioInscricao h1, h2, p, li{
-        color: #230D73;
-    }
+   
 .lista {
     display: flex;
     flex-wrap: wrap;
@@ -475,3 +479,7 @@ input {
   margin: auto;  
   margin-bottom: 50px;
   }
+
+#ulHallDaFama li{
+    text-align: center;
+}
