--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -35,28 +35,43 @@
     </p>
     <ul id="ulHallDaFama">
       <li>
-        <a href="Todas as pontuações acumuladas.html">
-          TODAS AS OPONTUAÇÕES ACUMULADAS
+        <!-- <a href="Todas as pontuações acumuladas.html"> -->
+        <a href="erro.html">
+          <p>
+            TODAS AS OPONTUAÇÕES ACUMULADAS
+          </p>
         </a>
       </li>
       <li>
-        <a href="os melhores em - INTERNET DAS COISAS.html">
-          INTERNET DAS COISAS
+        <!-- <a href="os melhores em - INTERNET DAS COISAS.html"> -->
+        <a href="erro.html">
+          <p>
+            INTERNET DAS COISAS
+          </p>
         </a>
       </li>
       <li>
-        <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
-          MARCAÇÕES HTML E CSS
+        <!-- <a href="os melhores em - MARCAÇÕES HTML E CSS.html"> -->
+        <a href="erro.html">
+          <p>
+            MARCAÇÕES HTML E CSS
+          </p>
         </a>
       </li>
       <li>
-        <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
-          PROGRAMANDO EM PYTHON
+        <!-- <a href="os melhores em - PROGRAMANDO EM PYTHON.html">  -->
+        <a href="erro.html">
+          <p>
+            PROGRAMANDO EM PYTHON
+          </p>
         </a>
       </li>
       <li>
-        <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
-          PROGRAMANDO EM JAVA SCRIPT
+        <!-- <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html"> -->
+        <a href="erro.html">
+          <p>
+            PROGRAMANDO EM JAVA SCRIPT
+          </p>
         </a>
       </li>
     </ul>
