--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -10,7 +10,11 @@
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>INFOPRODUTOS</title>
 </head>
-
+<style>
+h1, h2, p{
+  color: #230D73;
+}
+  </style>
 <body>
   <header>
     <div class="flex">
@@ -24,9 +28,10 @@
   </header>
   <div class="interface">
         <section id="formularioInscricao">
-      <h1>
+      <h1 style="font-size: 3rem;">
         Trabalhe conosco
       </h1>
+      <img src="../static/fundo.png" id="fundo-png" alt="">
       <h2>
         Já pensou em se tornar um parceiro aqui na Infoprodutos e começar a lucrar na internet hoje.
       </h2>
@@ -40,13 +45,15 @@
           WEB
         </p>
       </div>
-      <h2>
+      <h1>
         Indicações
+      </h1>
+      <h2>
+        Hospedagem e Domínio: A Casa e o Endereço do Seu Site na Internet
       </h2>
-      <h1>Hospedagem e Domínio: A Casa e o Endereço do Seu Site na Internet</h1>
-
-      <h2>O que é um Domínio?</h2>
-
+      <h2>
+        O que é um Domínio?
+              </h2>
       <p>
         Imagine o seu site como uma casa. O **domínio** é o **endereço** dessa casa na internet. É o nome que as
         pessoas digitam em seus navegadores para te encontrar.
