--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -10,6 +10,14 @@
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>INFOPRODUTOS</title>
 </head>
+<style>
+  h1,
+  h2,
+  p,
+  li {
+    color: #230D73;
+  }
+</style>
 
 <body>
   <header>
@@ -23,25 +31,21 @@
     </div>
   </header>
   <div class="interface">
+    <h1>
+      Habilidades básicas para desenvolver sites HTML e CSS
+    </h1>
+    <img src="../static/fundo.png" id="fundo-png" alt="">
     <section class="finalizar">
-        <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay>
-      </video>
-      <li>
-        <h1>
-          <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            Cadastrar-se
-          </a>
-        </h1>
-      </li>
-      <h2>
-        Habilidades básicas para desenvolver sites em mobile e PC
-      </h2>
       <p>
         Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:
       </p>
-      <h3>
-        HTML e CSS
-      </h3>
+      <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay>
+      </video>
+      <h1>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastrar-se
+        </a>
+      </h1>
       <li>
         <strong>
           HTML:
@@ -90,5 +94,13 @@
         **Segurança:** Proteger o site contra ataques e malwares.
       </li>
     </section>
+  </div>
+  <div
+    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+    <iframe loading="lazy"
+      style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+      allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
   </div>
 </body>
