--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -10,7 +10,11 @@
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>INFOPRODUTOS</title>
 </head>
-
+<style>
+  h1, h2, p, li{
+    color: #230D73;
+  }
+    </style>
 <body>
   <header>
     <div class="flex">
@@ -24,9 +28,10 @@
   </header>
     <div class="interface">
       <section id="sobre">
-    <h1 style="color: #230D73;">
+    <h1 style="color: #230D73; font-size: 3rem;">
       A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:
     </h1>
+    <img src="../static/fundo.png" id="fundo-png" alt="">
       <li>
         Soluções criativas e inovadoras para seus projetos de comunicação.
       </li>
