--- a/templates/validar certificado.html
+++ b/templates/validar certificado.html
@@ -10,7 +10,11 @@
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>INFOPRODUTOS</title>
 </head>
-
+<style>
+  h1, h2, p, li{
+    color: #230D73;
+  }
+    </style>
 <body>
   <header>
     <div class="flex">
