--- a/templates/IOT.html
+++ b/templates/IOT.html
@@ -12,6 +12,15 @@
     INFOPRODUTOS
   </title>
 </head>
+<style>
+  h1,
+  h2,
+  p,
+  li {
+    color: #230D73;
+  }
+</style>
+
 <body>
   <header>
     <div class="flex">
@@ -24,24 +33,22 @@
     </div>
   </header>
   <div class="interface">
-    <section class="finalizar">
-           <li>
-        <h1>
-          <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            Cadastra-se
-          </a>
-        </h1>
-      </li>
-
-      <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay>
-      </video>
-      <h2>
-        Habilidades Essenciais para Programar em IoT
-      </h2>
+    <h2>
+      Habilidades Essenciais para Programar em IoT
+    </h2>
+    <img src="../static/fundo.png" id="fundo-png" alt="">
+       <section class="finalizar">
       <li>
         A Internet das Coisas (IoT) conecta dispositivos físicos à internet, permitindo a coleta e troca de dados em
         tempo real. Programar para a IoT exige um conjunto de habilidades específicas:
       </li>
+      <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay>
+      </video>
+      <h1>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastra-se
+        </a>
+      </h1>
       <h3>
         1. Hardware e Eletrônica
       </h3>
@@ -114,5 +121,13 @@
         soluções inovadoras para o mundo.
       </li>
     </section>
+  </div>
+  <div
+    style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+    <iframe loading="lazy"
+      style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+      src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+      allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
   </div>
 </body>
