--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -10,7 +10,11 @@
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
   <title>INFOPRODUTOS</title>
 </head>
-
+<style>
+  h1, h2, p, li{
+    color: #230D73;
+  }
+    </style>
 <body>
   <header>
     <div class="flex">
@@ -24,23 +28,22 @@
   </header>
   <div class="interface">
     <section class="finalizar">
-          <li>
-        <h1>
-          <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            Cadastrar-se
-          </a>
-        </h1>
-      </li>
+      <h1>
+        Desenvolvimento WEB com JavaScript
+      </h1>
+      <img src="../static/fundo.png" id="fundo-png" alt="">
+               <p>
+          Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
+          validação de formulários e jogos.
+        </p>
       <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay>
       </video>
       <h1>
-        JavaScript
+        <a href="https://maper.info/2vNhu6asdas" target="_blank">
+          Cadastrar-se
+        </a>
       </h1>
-      <p>
-        Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
-        validação de formulários e jogos.
-      </p>
-      <h2>
+             <h2>
         Habilidades para desenvolver sites em mobile e PC
       </h2>
       <section>
@@ -66,4 +69,12 @@
       </section>
     </section>
   </div>
+  <div
+  style="position: relative; width: 100%; height: 0; padding-top: 58.8235%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0); margin-top: 1.6em; overflow: hidden; will-change: transform;">
+  <iframe loading="lazy"
+    style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF6WfQIMh4&#x2F;view?embed"
+    allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
 </body>
